--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 <body>
     <div class="container">
         <div class="container"><div class=" text-center mt-5 ">
-            <h1>PINCODE MISMATCH AUTOMATION</h1>
+            <h1>GEO TARGETING ERROR</h1>
+            <button class="btn"><a href="./ pin.html">Geocode Generator</a></button>
         </div>
         <div class="row ">
             <div class="col-lg-6 mx-auto">
